FIX vertical alignment of search button

--- a/client/src/components/Search/Search.scss
+++ b/client/src/components/Search/Search.scss
@@ -32,7 +32,6 @@
 
 // Search open icon
 .search__trigger {
-  margin-top: 10px;
   z-index: 1;
 
   .search--active & {
